<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FrameLayout">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="617dp"
        android:layout_gravity="bottom"
        app:srcCompat="@drawable/fine_art_potrait" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="100dp"
        android:layout_height="97dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        app:srcCompat="@drawable/black_elon_musk" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="68dp"
        android:layout_gravity="top|right"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        android:backgroundTint="@color/red"
        android:text="@string/button01"
        android:textColor="@color/white"
        android:textSize="25dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/black"
        android:textSize="80dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:layout_marginBottom="150dp"
        />
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/elon"
        android:textSize="80dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_gravity="center"
        />
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/musk"
        android:textSize="80dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:layout_marginTop="150dp"
        />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:textSize="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/nickname"
        />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aka"
        android:layout_gravity="top|center"
        android:layout_marginRight="13dp"
        android:layout_marginTop="50dp"
        android:textColor="@color/black_peach"
        />
</FrameLayout>