<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Table_layout">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:gravity="center"
            android:paddingTop="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:layout_height="0dp" >

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@tools:sample/avatars" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="match_parent" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="15dp"
                            android:layout_marginTop="10dp"
                            android:text="Name:"
                            android:textColor="@color/black"
                            android:textSize="20dp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="wrap_content"
                            android:layout_marginTop="20dp"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="15dp"
                            android:text="Phone:"
                            android:textColor="@color/black"
                            android:textSize="20dp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="15dp"
                            android:layout_marginTop="20dp"
                            android:text="Address:"
                            android:textColor="@color/black"
                            android:textSize="20dp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <EditText
                            android:id="@+id/editTextText2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="@string/hint"
                            android:inputType="text" />

                        <EditText
                            android:id="@+id/editTextTextEmailAddress2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="@string/hint1"
                            android:inputType="textEmailAddress" />

                        <EditText
                            android:id="@+id/editTextTextPostalAddress2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="@string/hint2"
                            android:inputType="textPostalAddress" />
                    </LinearLayout>

                </TableRow>

            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            >

            <Button
                android:id="@+id/button6"
                android:layout_width="wrap_content"
                android:layout_marginRight="80dp"
                android:layout_marginLeft="80dp"
                android:layout_height="50dp"
                android:text="Button" />
        </TableRow>

    </TableLayout>

</LinearLayout>